# capstone-autosync-sail

./: .gitignore  README.md  build.sh  capstone-autosync-sail.opam  dune-project  sail.filepaths.txt
.github/workflows/: end2end-smoke-test.yml
conf/: hash.txt  sail-files-paths.txt  sail-riscv-0.5.txt  sail-riscv-0.6.txt  sail-riscv-0.7.txt
lib/: constants.ml  decode_procedure.ml  decoder.ml  dune  gen_clike_typedef.ml  gen_decoder.ml  gen_decoder.mli  gen_instr_types.ml  gen_operand_info.ml  gen_operand_info.mli  gen_operand_info_defs.ml  gen_stringifier.ml  gen_stringifier.mli  hashset.ml  sail_analysis.ml  sail_ast_foreach.ml  sail_ast_foreach.mli  sail_ast_processor.ml  sail_utils.ml  stringifier.ml  stringify.ml  utils.ml
lib/c_codegen/: ccodegen_clike_typedef.ml  ccodegen_decode_procedure.ml  ccodegen_instr_types.ml  ccodegen_operand_info.ml  ccodegen_stringifier.ml  dune
riscv_disasm/: RISCVAst.gen.inc  RISCVAst2Str.gen.inc  RISCVAst2StrHelpers.h  RISCVAst2StrTbls.gen.inc  RISCVDecode.gen.inc  RISCVDecodeCompressed.gen.inc  RISCVDecodeHelpers.h  RISCVHelpersAst2Str.h  RISCVInsn.gen.inc  RISCVInsnMappings.gen.inc  RISCVOperands.gen.inc  RISCVOperands.gen__.inc  RISCVOperandsHelpers.h  RISCVRVContextHelpers.h
tools/: riscv-ls.sh  riscv_gen_csr_name_map.py  riscv_splat.py
